# XLangChain

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py  agent.py  api.py  processing.py  schemas.py  tool.py
app/sources/: kaggle_source.py  playwright_source.py
scripts/: fetch_kaggle_data.py
tests/: test_agent.py  test_api.py  test_kaggle_source.py  test_tool.py
