[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-insights-langchain-tool"
version = "0.1.0"
description = "Reusable Python tool and LangGraph workflow for public X data insights"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "kaggle>=1.7.4.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0",
]
scrape = [
  "playwright>=1.54.0",
]
data = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

